Conta. Listado Mayor. Saldos incorrectos en pantalla. [Fixes #2296]